# tbd

./: .gitattributes  .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  main.yml
examples/: sample.tbd
include/: lex.h  source_error.h  tokens.h
include/lib/: assertions.h  cmdline.h  error.h  hashtable.h  string.h  util.h  vector.h  xmalloc.h
include/tbdc/core/: compile.h
include/tbdc/frontend/: ast.h  lexer.h  parser.h  source.h  tokens.h
include/tbdc/lib/: assert.h  error.h  log.h  opts.h  string.h  unicode.h  util.h  xmalloc.h
src/: lex.c  main.c  meson.build  source_error.c  tokens.c
src/backend/: meson.build
src/core/: compile.c  meson.build
src/frontend/: ast.c  lexer.c  meson.build  parser.c  source.c  tokens.c
src/lib/: cmdline.c  error.c  hashtable.c  log.c  meson.build  opts.c  string.c  term.c  unicode.c  xmalloc.c
subprojects/munit/: meson.build
